# proc_scripts

./: .gitignore  .proc_CPMG.py.swn  AGENTS.md  LICENSE.md  README.md  README.rst  align_slice.py  dVoigt.pickle  data_files.csv  fieldsqeep.py  find_hi_power_T1.py  fit_result.pickle  fitdata_test.py  generate_T1p_Ep.py  get_nodes.py  globalfit_linewidth.py  globalfit_lmfit_linewidth.py  hahn_enhancements.py  hermitian_function_test.py  hermitian_phasing.py  inspect_raw_data.py  invrec_deutanal.py  linewidth_globalfit.py  manual_phasing_90_pulse.py  new_enhancement.py  new_proc_IR.py  plot_T1CPMG.py  proc_90.py  proc_90_pulse.py  proc_CPMG.prof  proc_CPMG.py  proc_CPMG_.py  proc_CPMG_DNP.py  proc_CPMG_calib.py  proc_CPMG_mw.py  proc_DNP.py  proc_DOSY_CPMG.py  proc_FS.py  proc_GDS.py  proc_Hahn_echo.py  (+49 more)
ODNP_SMB/: IR_data.txt  IR_single.py  IR_to_csv.py  enhancement_data.txt  new_proc_IR.py  proc_enhancement.py  proc_enhancement_multiple.py  temp_enhancement.py
doc_src/: Makefile  build_docs.sh  conf.py  index.rst  intro.rst  phasing.rst
docs/: .buildinfo  align.html  genindex.html  index.html  intro.html  objects.inv  phasing.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  toplevel.html
examples/: 200scan_echo_var.py  DCCT_debug.py  FIDfromEcho_fail.py  FIDtoEcho_Actual.py  FIDtoEcho_Actual_Challenging.py  GDS_capture_hahn.py  Hermitian_Phasing.py  Hermitian_Phasing_Actual_Challenging.py  Hermitian_Phasing_Actual_var_tau.py  Hermitian_Phasing_RealData.py  IR_proc_simple.py  L2G.py  QESR.py  QESR_rescale.py  QESR_samesample.py  README.txt  (+91 more)
(+288 files in other folders)
