[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspecProcScripts"
version = "0.1"
description = "Tools for processing and phasing Overhauser DNP NMR data."
readme = "README.rst"
license = { file = "LICENSE.md" }
authors = [
    { name = "A Guinness" },
    { name = "A A Beaton" },
    { name = "J M Franck" },
]
dependencies = [
    "argcomplete",
    "PySide6",
    "h5py",
    "pint",
    "pyspecdata",
]

[project.scripts]
pyspecProcScripts = "pyspecProcScripts.cmdline:main"

[tool.setuptools.packages.find]
include = ["pyspecProcScripts*"]
namespaces = true
